--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+### JetBrains ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
+
+# Ignore everything jetbrains
+.idea/
+# If not using the above rule, specific rules below
+.idea/workspace.xml
+.idea/tasks.xml
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
