Minor update to settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Salty-ORM
+name = salty-orm
 summary = A Python 3.x ORM implementing a Django ORM object model features, supports Sqlite and MySql.
 author = Robert Abram
 author-email = rabram991@gmail.com
