--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = salty-orm
+name = salty_orm
 summary = A Python 3.x ORM implementing a Django ORM object model features, supports Sqlite and MySql.
 author = Robert Abram
 author-email = rabram991@gmail.com
 license = MIT
-home-page = https://github.com/robabram/Salty-ORM
+home-page = https://github.com/robabram/salty_orm
 description-file = README.md
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
